@@ -2,13 +2,14 @@
 // Licensed under the GNU LGPL Version 2.1.
 //
 // First added:  2009-11-11
-// Last changed: 2010-02-10
+// Last changed: 2010-03-04
 
 #ifndef __TIME_SERIES_H
 #define __TIME_SERIES_H
 
 #include <string>
 #include <dolfin/common/Variable.h>
+#include <dolfin/common/Array.h>
 
 namespace dolfin
 {
@@ -49,6 +50,12 @@ namespace dolfin
 
     /// Retrieve mesh at given time
     void retrieve(Mesh& mesh, double t) const;
+
+    /// Return array of sample times for vectors
+    Array<double> vector_times() const;
+
+    /// Return array of sample times for meshes
+    Array<double> mesh_times() const;
 
     /// Clear time series
     void clear();
